# margin

./: .gitignore  README.md  cited.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py  settings.py
backend/app/agents/: __init__.py  decision.py
backend/app/api/: routes.py
backend/app/fixtures/: __init__.py  demo_data.py
backend/app/fixtures/data_room/: .contracts.json.swp  capability_matrix.csv  contracts.json  employee_roster.csv  invoices_q2.csv  license_decision_cohorts.csv  license_usage_90d.csv  spend_ledger.csv
backend/app/integrations/: clickhouse_client.py  composio_client.py  langfuse_client.py
backend/app/models/: schemas.py
backend/app/services/: data_room.py  detection.py  orchestrator.py  report.py  research.py  store.py  tasks.py
backend/tests/: test_api.py  test_data_room.py  test_detection.py  test_reliability.py  test_tasks.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/actions/: page.tsx
frontend/src/app/audit/[id]/: page.tsx
frontend/src/app/audits/[id]/overview/: page.tsx
frontend/src/app/decision/: page.tsx
frontend/src/app/memory/: page.tsx
frontend/src/app/report/: page.tsx
frontend/src/app/research/: page.tsx
frontend/src/components/: badge.tsx  browser-research-panel.tsx  integration-strip.tsx  loading.tsx  logo.tsx  metric-card.tsx  page-header.tsx  shell.tsx  workflow-ribbon.tsx
frontend/src/hooks/: use-audit.ts
frontend/src/lib/: api.ts  types.ts
scripts/: dev.sh  preflight.py
