[project]
name = "margin-backend"
version = "0.1.0"
description = "Margin autonomous spend recovery demo backend"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.72.0",
  "beautifulsoup4>=4.13.0",
  "clickhouse-connect>=0.9.0",
  "composio>=0.8.0",
  "fastapi>=0.135.0",
  "httpx>=0.28.0",
  "langfuse>=4.0.0",
  "pydantic-settings>=2.10.0",
  "pypdf>=6.0.0",
  "python-docx>=1.2.0",
  "python-multipart>=0.0.20",
  "python-dotenv>=1.1.0",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
